--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
+  "type": "module",
   "dependencies": {
     "jest": "^29.7.0"
+  },
+  "scripts": {
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   }
 }
